--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     //Google Login
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
+    //Realtime Database
+    implementation("com.google.firebase:firebase-database")
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
